# Ditto

./: .gitignore  Dockerfile  README.md  build-linux.bat  bump.bat  bump.sh  package-lock.json  package.json
.github/workflows/: release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/: i18n.svelte.js  utils.js
src/lib/components/: CompareModal.svelte  HomeView.svelte  ImageCard.svelte  PreviewModal.svelte  ResultsView.svelte  ScanningView.svelte
src/lib/stores/: scan.svelte.js
src/routes/: +layout.svelte  +page.svelte
